--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="col-5">
-                        <form action="gameplay.html">
+                        <form action="./gameplay.html">
 
                             <input type="text" placeholder="Enter your Name" class="form-control rounded-4"
                                 value="Player" id="getName">
@@ -104,9 +104,9 @@
 
 
     <script src="./node_modules/txtanime.js/dist/TxtAnime.js"></script>
-    <script src="javascript/index.js"></script>
-    <script src="javascript/gameplay.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./javascript/index.js"></script>
+    <script src="./javascript/gameplay.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
